Instalo tailwind y añado layout nuevo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,24 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from '../layouts/BaseLayout.astro';
+import ProjectCard from '../components/ProjectCard.astro';
 ---
+<BaseLayout>
+  <section class="hero">
+    <h2>Hola, soy Sergio Izquierdo</h2>
+    <p>Desarrollador web frontend especializado en Angular y Astro.</p>
+  </section>
 
-<Layout>
-	<Welcome />
-</Layout>
+  <section class="projects">
+    <h2>Mis proyectos</h2>
+    <ProjectCard 
+      title="Gestión económica (AhorroLand)" 
+      description="Página web para gestionar las finanzas de un usuario realizada con Angular y .NET Core" 
+      link="https://ahorroland.sergioizq.es" 
+    />
+    <ProjectCard
+      title="Más proyectos por realizar" 
+      description="" 
+      link="https://github.com/sergioizq" 
+    />
+  </section>
+</BaseLayout>
