--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  @apply antialiased selection:bg-blue-500/30 selection:text-blue-800;
+  @apply antialiased selection:bg-blue-500/30 selection:text-blue-800 leading-relaxed;
 }
 
 section {
