--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -1,68 +1,79 @@
 ---
 import ThemeToggle from "@components/ThemeToggle.astro";
+import LinkedinIcon from "../icons/LinkedinIcon.astro";
+import GithubIcon from "../icons/GithubIcon.astro";
 ---
 
-<nav
-  class="fixed top-0 w-full bg-gray-900/70 backdrop-blur-md py-4 z-50"
->
+<nav class="fixed top-0 w-full bg-gray-900/70 backdrop-blur-md py-4 z-50">
   <div class="w-full max-w-6xl mx-auto px-6 flex justify-between items-center">
-    
     <a href="#hero" class="text-xl font-bold text-cyan-400"> Sergio.dev </a>
 
-    <ul class="hidden md:flex gap-6 text-sm font-medium">
-      <li>
-        <a
-          href="#about"
-          class="text-gray-300 hover:text-cyan-400 transition-colors"
-          >Sobre mí</a
-        >
-      </li>
-      <li>
-        <a
-          href="#experience"
-          class="text-gray-300 hover:text-cyan-400 transition-colors"
-          >Experiencia</a
-        >
-      </li>
-      <li>
-        <a
-          href="#projects"
-          class="text-gray-300 hover:text-cyan-400 transition-colors"
-          >Proyectos</a
-        >
-      </li>
-      <li>
-        <a
-          href="#skills"
-          class="text-gray-300 hover:text-cyan-400 transition-colors">Skills</a
-        >
-      </li>
-      <li>
-        <a
-          href="#contact"
-          class="text-gray-300 hover:text-cyan-400 transition-colors"
-          >Contacto</a
-        >
-      </li>
-    </ul>
+    <div class="flex items-center gap-6">
+      <ul class="hidden md:flex gap-6 text-sm font-medium">
+        <li>
+          <a
+            href="#about"
+            class="text-gray-300 hover:text-cyan-400 transition-colors"
+          >
+            Sobre mí
+          </a>
+        </li>
+        <li>
+          <a
+            href="#experience"
+            class="text-gray-300 hover:text-cyan-400 transition-colors"
+          >
+            Experiencia
+          </a>
+        </li>
+        <li>
+          <a
+            href="#projects"
+            class="text-gray-300 hover:text-cyan-400 transition-colors"
+          >
+            Proyectos
+          </a>
+        </li>
+        <li>
+          <a
+            href="#skills"
+            class="text-gray-300 hover:text-cyan-400 transition-colors"
+            >Skills</a
+          >
+        </li>
+        <li>
+          <a
+            href="#contact"
+            class="text-gray-300 hover:text-cyan-400 transition-colors"
+          >
+            Contacto
+          </a>
+        </li>
+      </ul>
 
-    <div class="flex items-center gap-4">
-      <a
-        href="https://www.linkedin.com/in/sergioizquierdomoreno/"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="text-gray-400 hover:text-white transition-colors"
-      >
+      <div class="flex items-center gap-4">
+        <a
+          href="https://www.linkedin.com/in/sergioizquierdomoreno/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="flex items-center justify-center text-gray-400 hover:text-white transition-colors w-5 h-5"
+          aria-label="Mi perfil de LinkedIn"
+        >
+          <LinkedinIcon class="w-full h-full" />
         </a>
-      <a
-        href="https://github.com/SergioIzq"
-        target="_blank"
-        rel="noopener noreferrer"
-        class="text-gray-400 hover:text-white transition-colors"
-      >
+
+        <a
+          href="https://github.com/SergioIzq"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="flex items-center justify-center text-gray-400 hover:text-white transition-colors w-5 h-5"
+          aria-label="Mi perfil de GitHub"
+        >
+          <GithubIcon class="w-full h-full" />
         </a>
-      <ThemeToggle />
+
+        <ThemeToggle class="w-5 h-5" />
+      </div>
     </div>
-
   </div>
 </nav>
