--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,32 +1,48 @@
 ---
+import Navbar from "@/components/sections/Navbar.astro";
+import "../styles/global.css";
+
+const { meta = {} } = Astro.props;
 const {
   title = "Mi Portafolio",
   description = "Desarrollador web minimalista.",
-} = Astro.props;
+} = meta;
 ---
 
-<html lang="es" class="scroll-smooth">
+<html lang="es" class="scroll-smooth h-full dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>{title}</title>
     <meta name="description" content={description} />
-
-    <!-- Fuente moderna -->
+    <link rel="icon" type="image/png" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
-    <!-- Tailwind -->
-    <link rel="stylesheet" href="/src/styles/global.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body
-    class="font-[Inter] bg-gray-100 text-gray-900 dark:bg-gray-950 dark:text-gray-100 transition-colors duration-300"
-  >
-    <slot />
+  <body class="relative h-full">
+    <header>
+      <Navbar />
+    </header>
+
+    <!-- Fondo -->
+    <div
+      class="fixed inset-0 bg-gradient-to-br from-gray-100 via-gray-200 to-cyan-100 dark:from-gray-950 dark:via-gray-900 dark:to-cyan-900 -z-10"
+    >
+    </div>
+
+    <!-- Contenido principal -->
+    <main class="relative z-10 h-full">
+      <slot />
+    </main>
   </body>
 </html>
