--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,17 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 80px; 
-}
 
 body {
   @apply antialiased selection:bg-blue-500/30 selection:text-blue-800 leading-relaxed;
 }
 
 section {
-  @apply min-h-screen flex flex-col justify-center items-center px-6 md:px-12;
+  @apply flex flex-col items-center px-6 md:px-12;
 }
 
 h2 {
@@ -25,3 +21,14 @@ h2 {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a {
+  /* Usa la fuente 'serif' que definiste en tailwind.config.mjs */
+  @apply font-serif;
+  line-height: 1.3 !important;
+}
