--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -13,7 +13,7 @@ import DownloadIcon from "../icons/DownloadIcon.astro";
         >Desarrollador Full Stack</strong
       >. Cuento con más de 2 años de experiencia en Angular, .NET Core y SQL
       Server, enfocado en crear soluciones web escalables, seguras y con código
-      limpio. Actualmente, estoy cursando Ingeniería Informática en la Universida Pablo de Olavide (UPO),
+      limpio. Actualmente, estoy cursando Ingeniería Informática en la Universidad Pablo de Olavide (UPO),
       Sevilla, y continúo formándome en mi tiempo libre para mantenerme al día
       con las últimas tecnologías.
     </p>
